Video Sequencer: Strip/Effect Strip animation not applied if keys are set #67516

Closed
opened 2019-07-23 14:41:37 +02:00 by Tristan · 6 comments

Keyed values won't change according to their animation in the VSE. See Size X/Size Y animation on the Gaussion Blur strip in the provided file. Upon rendering, the fields flash orange and the value skips to 0.
In a more complex file, the same is true for all values for any Sequencer strip (Compositing/Opacity stopped working).
Preview seems fine and only rendering is incorrect for small projects, while complex files also create incorrect previews.

sequencer_blur.blend

System Information
Operating system: Linux-5.0.0-21-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 780 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.34

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-18 14:52, hash: 38d4483c6a
Worked: (optional)

Short description of error
[Please fill out a short description of the error here]

Exact steps for others to reproduce the error

Keyed values won't change according to their animation in the VSE. See Size X/Size Y animation on the Gaussion Blur strip in the provided file. Upon rendering, the fields flash orange and the value skips to 0. In a more complex file, the same is true for all values for any Sequencer strip (Compositing/Opacity stopped working). Preview seems fine and only rendering is incorrect for small projects, while complex files also create incorrect previews. [sequencer_blur.blend](https://archive.blender.org/developer/F7624595/sequencer_blur.blend) **System Information** Operating system: Linux-5.0.0-21-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 780 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.34 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-18 14:52, hash: `38d4483c6a` Worked: (optional) **Short description of error** [Please fill out a short description of the error here] **Exact steps for others to reproduce the error** - Open [sequencer_blur.blend](https://archive.blender.org/developer/F7624595/sequencer_blur.blend) - See blur in the preview window - Press F12 - See a sharp image
Author

Added subscriber: @Plyro

Added subscriber: @Plyro
Tristan changed title from Sequencer: Strip/Effect Strip animation not applied if keys are set to Video Sequencer: Strip/Effect Strip animation not applied if keys are set 2019-07-23 14:41:58 +02:00

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

This bug only seems to occur with effect strips on a Scene strip. Applying an animated blur on an image strip works as expected.

The effect strip animation is evaluated at the wrong time. Instead of using the time of the sequencer scene [1-250], it uses the time of the Scene strip itself [1001-1250].

This bug only seems to occur with effect strips on a Scene strip. Applying an animated blur on an image strip works as expected. The effect strip animation is evaluated at the wrong time. Instead of using the time of the sequencer scene [1-250], it uses the time of the Scene strip itself [1001-1250].
Sybren A. Stüvel self-assigned this 2019-08-01 10:14:34 +02:00

This issue was referenced by 42798a5ca1

This issue was referenced by 42798a5ca16154c9ecaf5a2359bd0b4fbe9dec94

Potential fix in D5394

Potential fix in [D5394](https://archive.blender.org/developer/D5394)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67516
No description provided.